Cosmetic fixes to alignment. Make menu items fully selectable.

--- a/src/modules/main/components/Main/Main.scss
+++ b/src/modules/main/components/Main/Main.scss
@@ -57,10 +57,18 @@ input[type="checkbox"]#r2menutoggle {
 
   .r2-menu-item {
     width: 100%;
-    padding: 20px;
+    padding: 0px;
     color: #6a5750;
     border-bottom: 1px solid #ffffff;
     box-sizing: border-box;
+
+    a {
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      padding: 20px;
+      box-sizing: border-box;
+    }
   }
 
   .r2-copyright-notice {
@@ -79,15 +87,23 @@ input[type="checkbox"]#r2menutoggle {
   transition: transform 0.5s;
 
   .r2-top-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     width: 100%;
     background-color: #DADADA;
     margin: 0px;
+    vertical-align: middle;
+
+    .r2-nav-button {
+      display: inline-block;
+    }
 
     button {
-      display: inline-block;
       width: 58px;
       height: 58px;
       border: none;
+      background-color: #DADADA;
     }
 
     h1 {
